--- a/session-12/index.html
+++ b/session-12/index.html
@@ -20,10 +20,14 @@
 			<h5>It describes something about heading</h5>
 		</div>
 		<div class="about">
+		<p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum is simply dummy text of th</p>
 			<h1 class="text-center">What is Lorem Ipsum?</h1>
+						<h1 class="text-center">What is Lorem Ipsum?</h1>
+
 			<p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of</p>
 		</div>
 		<hr>
+		<button type="button"style="font-size:20px;">This is button</button>
 		<h1 class="text-center">This some section</h1>
 		<div class="section1 d-flex">
 			<img src="img/img1.png"width="300" height="300" alt="tree">
@@ -41,5 +45,8 @@
 		<footer>
 			<p>sample copy rights text</p>
 		</footer>
+		<script type="text/javascript">
+			document.write('hello javscript')
+		</script>		
 	</body>
 </html>
