bootstrap pages added

--- a/bootstrap-class.html
+++ b/bootstrap-class.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Page 1</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	</head>
 	<body>
@@ -22,6 +23,7 @@
 
 			</div> <!--row ends-->
 			<div class="row">
+				<!-- Default Table which is present in bootstrap -->
 				<table class="table">
 					<thead>
 						<tr>
@@ -48,13 +50,47 @@
 						</tr>
 					<tbody>
 				</table>
+				
+			</div>
+			<div class="row">
+				<div class="col-md-3 col-lg-6">
+					<div class="alert alert-primary" role="alert">
+  A simple primary alert—check it out!
+</div>
+				</div>
+				<div class="col-md-3 col-lg-6">
+					<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
+				</div>
+				<div class="col-md-3 col-lg-6">
+					<div class="alert alert-primary" role="alert">
+  A simple primary alert—check it out!
+</div>
+				</div>
+				<div class="col-md-3 col-lg-6">
+					<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
+				</div>
 			</div>
 			
 		</div> <!--container ends-->
 	</body>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" ></script>
-	
-
-
 </html>
