--- a/bootstrap-pages/index.html
+++ b/bootstrap-pages/index.html
@@ -3,44 +3,209 @@
 	<head>
     <title>Home page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 	</head>
 	<body class="m-0">
-			<nav class="navbar navbar-expand-lg navbar-light bg-info px-4">
-					<a class="navbar-brand text-white" href="#">XYZ ARCH</a>
+			<nav class="navbar navbar-expand-lg navbar-light bg-white px-4">
+					<a class="navbar-brand color1" href="#">XYZ ARCH</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					  <span class="navbar-toggler-icon"></span>
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					  <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link text-white" href="#">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link color1" href="#">About <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Projects</a>
+                <a class="nav-link color1" href="#">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                <a class="nav-link color1" href="#" tabindex="-1" aria-disabled="true">Contact</a>
               </li>
 					  </ul>
 					</div>
 				  </nav>
 		<div class="container-fluid">
-      <!-- <div class="row">img code</div> -->
       <div class="row">
-        <div class="col-sm-12">
+        <img src="img/banner.jpg" class="w-100" alt="banner-img">
+      </div>
+      <div class="row mt-5">
+        <div class="col-sm-12 text-center">
           <h2>Projects</h2>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-3 border border-primary p-4"></div>
-        <div class="col-sm-3 border border-primary p-4"></div>
-        <div class="col-sm-3 border border-primary p-4"></div>
-        <div class="col-sm-3 border border-primary p-4"></div>
-        <div class="col-sm-3 border border-primary p-4"></div>
-        <div class="col-sm-3 border border-primary p-4"></div>
-        <div class="col-sm-3 border border-primary p-4"></div>
-        <div class="col-sm-3 border border-primary p-4"></div>
+      <div class="row px-3">
+        <div class="col-sm-3">
+          <div class="mr-2 my-3">
+            <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
+            <div class="position-absolute top-16">
+              <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="mr-2 my-3">
+              <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
+              <div class="position-absolute top-16">
+                <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+              <div class="mr-2 my-3">
+                <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
+                <div class="position-absolute top-16">
+                  <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="mr-2 my-3">
+                  <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
+                  <div class="position-absolute top-16">
+                    <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                  <div class="mr-2 my-3">
+                    <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
+                    <div class="position-absolute top-16">
+                      <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="mr-2 my-3">
+                      <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
+                      <div class="position-absolute top-16">
+                        <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-3">
+                      <div class="mr-2 my-3">
+                        <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
+                        <div class="position-absolute top-16">
+                          <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="mr-2 my-3">
+                          <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
+                          <div class="position-absolute top-16">
+                            <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                          </div>
+                        </div>
+                      </div>
+      </div>
+      <div class="row mt-5 my-sm-0">
+        <div class="col-sm-12 text-center">
+          <h2>Section-3</h2>
+        </div>
+      </div>
+      <div class="row mt-5 bg-light px-3 py-4">
+        <div class="col-sm-5 text-center">
+          <div class="custm-table">
+            <table class="table table-striped table-dark">
+              <thead>
+                <tr>
+                  <th>Head1</th>
+                  <th>Head1</th>
+                  <th>Head1</th>
+                  <th>Head1</th>
+                  <th>Head1</th>
+                </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                    <td>Head1</td>
+                    <td>Head1</td>
+                    <td>Head1</td>
+                    <td>Head1</td>
+                    <td>Head1</td>
+                  </tr>
+                  <tr>
+                      <td>Head1</td>
+                      <td>Head1</td>
+                      <td>Head1</td>
+                      <td>Head1</td>
+                      <td>Head1</td>
+                    </tr>
+                    <tr>
+                        <td>Head1</td>
+                        <td>Head1</td>
+                        <td>Head1</td>
+                        <td>Head1</td>
+                        <td>Head1</td>
+                      </tr>
+                      <tr>
+                          <td>Head1</td>
+                          <td>Head1</td>
+                          <td>Head1</td>
+                          <td>Head1</td>
+                          <td>Head1</td>
+                        </tr>
+                        <tr>
+                            <td>Head1</td>
+                            <td>Head1</td>
+                            <td>Head1</td>
+                            <td>Head1</td>
+                            <td>Head1</td>
+                          </tr>
+                </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="col-sm-7 text-center">
+            <div class="accordion" id="accordionExample">
+                <div class="card">
+                  <div class="card-header" id="headingOne">
+                    <h2 class="mb-0">
+                      <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Collapsible Group Item #1
+                      </button>
+                    </h2>
+                  </div>
+              
+                  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-header" id="headingTwo">
+                    <h2 class="mb-0">
+                      <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Collapsible Group Item #2
+                      </button>
+                    </h2>
+                  </div>
+                  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                    <div class="card-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-header" id="headingThree">
+                    <h2 class="mb-0">
+                      <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Collapsible Group Item #3
+                      </button>
+                    </h2>
+                  </div>
+                  <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                    <div class="card-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
       </div>
     </div>
 	</body>
