--- a/bootstrap-pages/about.html
+++ b/bootstrap-pages/about.html
@@ -1,28 +1,87 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Page 1</title>
+    <title>Home page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 	</head>
 	<body class="m-0">
-	<!-- this is the header section -->
-		<header class="head d-flex">
-			<a href="#">Page 1</a>
-			<a href="#">Page 2</a>
-			<a href="#">Page 3</a>
-		</header>
-		
+			<nav class="navbar navbar-expand-lg navbar-light bg-white px-4">
+					<a class="navbar-brand color1" href="#">XYZ ARCH</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					  <span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					  <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link color1" href="about.html">About <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link color1" href="#">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link color1" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+              </li>
+					  </ul>
+					</div>
+				  </nav>
+		<div class="container-fluid">
+      <div class="row">
+        <img src="img/banner.jpg" class="w-100" alt="about banner">
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="my-5">
+              <h1 class="text-center">Vision</h1>
+              <p class="text-dark px-5 text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                s Lorem Ipsum has been the industry's standard dummy text ev
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                s Lorem Ipsum has been the industry's standard dummy text ev
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                s Lorem Ipsum has been the industry's standard dummy text ev
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                s Lorem Ipsum has been the industry's standard dummy text ev
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <footer class="bg-secondary px-4 pt-4">
+      <div class="row">
+        <div class="col-sm-4">
+          <h3>About</h3>
+          <ul class="nav flex-column">
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
+          <h3>About1</h3>
+          <ul class="nav flex-column">
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
+          <h3>Contact</h3>
+          <ul class="nav flex-row">
+            <li class="mr-2"><a href="#" class="text-white"><img src="img/facebook.svg" alt="facebook" width="22" height="22"></a></li>
+            <li class="mr-2"><a href="#" class="text-white"><img src="img/linkedin.svg" alt="facebook" width="22" height="22"></a></li>
+            <li class="mr-2"><a href="#" class="text-white"><img src="img/twitter.svg" alt="facebook" width="22" height="22"></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row bg-light pt-3 mt-3">
+        <div class="col-sm-12">
+          <p class="text-dark">Copyrights @2020</p>
+        </div>
+      </div>
+    </footer> -->
 	</body>
- <script type="text/javascript">
-		
-		//alert('56');
-		var x;
-		x=20;
-		//var x=10;
-		// let y= 20;
-		// const dob;
-		//let name='ram', age= '10', prof='xyz'
-	
-	console.log(x) // console statement
-//x = 3.14;  
-	</script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="js/bootstrap.js"></script>
 </html>
