--- a/bootstrap-pages/index.html
+++ b/bootstrap-pages/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body class="m-0">
 			<nav class="navbar navbar-expand-lg navbar-light bg-white px-4">
-					<a class="navbar-brand color1" href="#">XYZ ARCH</a>
+					<a class="navbar-brand color1" href="index.html">XYZ ARCH</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					  <span class="navbar-toggler-icon"></span>
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					  <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link color1" href="#">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link color1" href="about.html">About <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link color1" href="#">Projects</a>
@@ -208,6 +208,41 @@
         </div>
       </div>
     </div>
+    <footer class="bg-secondary px-4 pt-4">
+      <div class="row">
+        <div class="col-sm-4">
+          <h3>About</h3>
+          <ul class="nav flex-column">
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
+          <h3>About1</h3>
+          <ul class="nav flex-column">
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+            <li><a href="#" class="text-white">Content1</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
+          <h3>Contact</h3>
+          <ul class="nav flex-row">
+            <li class="mr-2"><a href="#" class="text-white"><img src="img/facebook.svg" alt="facebook" width="22" height="22"></a></li>
+            <li class="mr-2"><a href="#" class="text-white"><img src="img/linkedin.svg" alt="facebook" width="22" height="22"></a></li>
+            <li class="mr-2"><a href="#" class="text-white"><img src="img/twitter.svg" alt="facebook" width="22" height="22"></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row bg-light pt-3 mt-3">
+        <div class="col-sm-12">
+          <p class="text-dark">Copyrights @2020</p>
+        </div>
+      </div>
+    </footer>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.js"></script>
