--- a/bootstrap-pages/index.html
+++ b/bootstrap-pages/index.html
@@ -40,7 +40,7 @@
           <div class="mr-2 my-3">
             <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
             <div class="position-absolute top-16">
-              <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+              <h4 class="bg-secondary text-white mb-0 p-2 roboto-italic">Projects-summary</h4>
             </div>
           </div>
         </div>
@@ -48,7 +48,7 @@
             <div class="mr-2 my-3">
               <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
               <div class="position-absolute top-16">
-                <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                <h4 class="bg-secondary text-white mb-0 p-2 roboto-italic">Projects-summary</h4>
               </div>
             </div>
           </div>
@@ -56,7 +56,7 @@
               <div class="mr-2 my-3">
                 <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
                 <div class="position-absolute top-16">
-                  <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                  <h4 class="bg-secondary text-white mb-0 p-2 roboto-italic">Projects-summary</h4>
                 </div>
               </div>
             </div>
@@ -64,7 +64,7 @@
                 <div class="mr-2 my-3">
                   <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
                   <div class="position-absolute top-16">
-                    <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                    <h4 class="bg-secondary text-white mb-0 p-2 roboto-italic">Projects-summary</h4>
                   </div>
                 </div>
               </div>
@@ -72,7 +72,7 @@
                   <div class="mr-2 my-3">
                     <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
                     <div class="position-absolute top-16">
-                      <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                      <h4 class="bg-secondary text-white mb-0 p-2 roboto-italic">Projects-summary</h4>
                     </div>
                   </div>
                 </div>
@@ -80,7 +80,7 @@
                     <div class="mr-2 my-3">
                       <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
                       <div class="position-absolute top-16">
-                        <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                        <h4 class="bg-secondary text-white mb-0 p-2 roboto-italic">Projects-summary</h4>
                       </div>
                     </div>
                   </div>
@@ -88,7 +88,7 @@
                       <div class="mr-2 my-3">
                         <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
                         <div class="position-absolute top-16">
-                          <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                          <h4 class="bg-secondary text-white mb-0 p-2 roboto-italic">Projects-summary</h4>
                         </div>
                       </div>
                     </div>
@@ -96,7 +96,7 @@
                         <div class="mr-2 my-3">
                           <img src="img/team-1.jpg" class="img-fluid" alt="team-1">
                           <div class="position-absolute top-16">
-                            <h4 class="bg-secondary text-white mb-0 p-2">Projects-summary</h4>
+                            <h4 class="bg-secondary text-white mb-0 p-2 roboto-italic">Projects-summary</h4>
                           </div>
                         </div>
                       </div>
@@ -239,7 +239,7 @@
       </div>
       <div class="row bg-light pt-3 mt-3">
         <div class="col-sm-12">
-          <p class="text-dark">Copyrights @2020</p>
+          <p class="text-dark chelsamarket">Copyrights @2020</p>
         </div>
       </div>
     </footer>
